--- a/src/index.html
+++ b/src/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
       <title><%= htmlWebpackPlugin.options.title %></title>
+      <meta charset="utf-8" />
   </head>
   <body>
   </body>
